@@ -749,6 +749,9 @@ tourism_time_scale_percent = 100
 ; One the first turn of a hotseat game, all human players will be given diplomatic contact with each other.
 introduce_all_human_players_at_start_of_hotseat_game = false
 
+; Stops units from enslaving a target they've destroyed by bombarding as opposed to direct combat
+prevent_enslaving_by_bombardment = false
+
 [=======================]
 [=== DAY/NIGHT CYCLE ===]
 [=======================]
